--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -198,7 +198,6 @@ body {
 .spotlight__article {
   display: flex;
   flex-direction: column;
-  gap: 3rem;
 }
 .spotlight__img {
   overflow: hidden;
@@ -217,7 +216,7 @@ body {
 
 .spotlight__content {
   width: 80%;
-  padding: 4rem 3rem;
+  padding: 4rem 3rem 0rem;
   position: relative;
   left: 50%;
   background-color: white;
