--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -226,7 +226,6 @@ body {
 .spotlight__article {
     display: flex;
     flex-direction: column;
-    gap: 3rem;
 
     @at-root .spotlight__img {
         overflow: hidden;
@@ -240,7 +239,7 @@ body {
     @at-root .spotlight__content {
 
         width: 80%;
-        padding: 4rem 3rem;
+        padding: 4rem 3rem 0rem;
         position: relative;
         left: 50%;
         background-color: white;
