modified space between img and spotlight__content

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -198,6 +198,7 @@ body {
 .spotlight__article {
   display: flex;
   flex-direction: column;
+  gap: 1rem;
 }
 .spotlight__img {
   overflow: hidden;
