--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -226,6 +226,7 @@ body {
 .spotlight__article {
     display: flex;
     flex-direction: column;
+    gap: 1rem;
 
     @at-root .spotlight__img {
         overflow: hidden;
