modify btn width

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -126,8 +126,8 @@ body {
   color: #071f32;
 }
 .side-nav__map {
-  padding: 5px;
-  width: 40%;
+  padding: 0.6rem;
+  width: 34%;
   font-size: 1.1rem;
   font-weight: 500;
   color: #e22c3f;
@@ -340,8 +340,8 @@ body {
 }
 .aside-news__item .aside__showmore-btn {
   color: #e22c3f;
-  padding: 3px 10px;
-  width: 47%;
+  padding: 0.3rem 1rem;
+  width: 40%;
   position: relative;
   font-size: 1.5rem;
   font-weight: 500;
@@ -438,7 +438,7 @@ body {
   font-weight: 700;
   text-transform: uppercase;
   color: #e22c3f;
-  padding: 8px 10px;
+  padding: 0.8rem 1rem;
   position: relative;
   z-index: 999;
 }
