--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -135,8 +135,8 @@ body {
 
     /*****side-nav___map ******/
     &__map {
-        padding: 5px;
-        width: 40%;
+        padding: 0.6rem;
+        width: 34%;
         font-size: 1.1rem;
         font-weight: 500;
         color: #e22c3f;
@@ -361,8 +361,8 @@ body {
     
         .aside__showmore-btn {
             color: #e22c3f;
-            padding: 3px 10px;
-            width: 47%;
+            padding: 0.3rem 1rem;
+            width: 40%;
             position: relative;
             font-size: 1.5rem;
             font-weight: 500;
@@ -470,7 +470,7 @@ body {
                     text-transform: uppercase;
 
                     color: #e22c3f;
-                    padding: 8px 10px;
+                    padding: 0.8rem 1rem;
                     position: relative;
                     z-index: 999;
 
